# yolo-video-detection-example

./: .editorconfig  .gitignore  .pylintrc  MANIFEST.in  README.md  log_settings.yaml  main.py  processing.py  pyproject.toml  requirements.base.txt  requirements.cpu.txt  requirements.dev.txt  requirements.gpu.txt  requirements.inference.txt  requirements.torch.cpu.txt  requirements.torch.gpu.txt  requirements.txt  setup.py  touch_designer.py
.github/workflows/: build-and-publihs.yaml
tests/: test_color_conv.py  test_jit_transforms.py
video_detection/log_set/: init_log.py  utc_formatter.py
yolo_models/: bbox_utils.py  classes.py  image_utils.py  ops.py  torch_transforms.py
yolo_models/detection/: __init__.py  detector.py
yolo_models/log_set/: __init__.py  init_log.py
yolo_models/nms/: __init__.py  nms.pyx
yolo_models/processing/: base_processing.py  color_utils.py  detection_processing.py  info.py
