[build-system]
requires = [
    "setuptools>=51.1",
    "wheel>=0.36"
]
build-backend = "setuptools.build_meta"

[project]
name = "video_detection"
authors =[ { name="None"  }]
requires-python = ">=3.10"
version = "0.0.1"
readme = "README.md"
classifiers = [ "Intended Audience :: Developers", "Operating System :: OS Independent" ,"License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3" ]