[build-system]
requires = [
    "setuptools>=63.0",
    "wheel>=0.40"
]
build-backend = "setuptools.build_meta"

[tool.isort]
skip = ["setup.py"]

[project]
name = "touch_designer_yolo_models"
authors =[ { name="None"  }]
requires-python = ">=3.9"
version = "0.0.1"
dynamic= ["dependencies", "optional-dependencies"]
readme = "README.md"
classifiers = [ "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3" ]